tests/fail/nightly/missing_trait.stderr
error[E0277]: type `NoFromScanf` can't be parsed by sscanf because it does not implement `FromScanf`
 --> tests/fail/nightly/missing_trait.rs:6:33
  |
6 |     sscanf::sscanf!("hi", "{}", module::NoFromScanf);
  |                                 ^^^^^^^^^^^^^^^^^^^ can't be parsed by sscanf
  |
  = help: the trait `FromScanf<'_>` is not implemented for `NoFromScanf`
  = note: derive or implement `FromScanf` for `NoFromScanf` to use it with `sscanf!`
  = note: see the `FromScanf` documentation for details: <https://docs.rs/sscanf/latest/sscanf/trait.FromScanf.html>
  = help: the following other types implement trait `FromScanf<'input>`:
            NonZero<i128>
            NonZero<i16>
            NonZero<i32>
            NonZero<i64>
            NonZero<i8>
            NonZero<isize>
            NonZero<u128>
            NonZero<u16>
          and $N others

error[E0277]: type `NoFromScanf` can't be parsed by sscanf because it does not implement `FromScanf`
 --> tests/fail/nightly/missing_trait.rs:7:29
  |
7 |     sscanf::sscanf!("hi", "{module::NoFromScanf}");
  |                             ^^^^^^^^^^^^^^^^^^^ can't be parsed by sscanf
  |
  = help: the trait `FromScanf<'_>` is not implemented for `NoFromScanf`
  = note: derive or implement `FromScanf` for `NoFromScanf` to use it with `sscanf!`
  = note: see the `FromScanf` documentation for details: <https://docs.rs/sscanf/latest/sscanf/trait.FromScanf.html>
  = help: the following other types implement trait `FromScanf<'input>`:
            NonZero<i128>
            NonZero<i16>
            NonZero<i32>
            NonZero<i64>
            NonZero<i8>
            NonZero<isize>
            NonZero<u128>
            NonZero<u16>
          and $N others

error[E0277]: type `NoFromScanf` can't be parsed by sscanf because it does not implement `FromScanf`
 --> tests/fail/nightly/missing_trait.rs:9:33
  |
9 |     sscanf::sscanf!("hi", "{}", NoFromScanf);
  |                                 ^^^^^^^^^^^ can't be parsed by sscanf
  |
  = help: the trait `FromScanf<'_>` is not implemented for `NoFromScanf`
  = note: derive or implement `FromScanf` for `NoFromScanf` to use it with `sscanf!`
  = note: see the `FromScanf` documentation for details: <https://docs.rs/sscanf/latest/sscanf/trait.FromScanf.html>
  = help: the following other types implement trait `FromScanf<'input>`:
            NonZero<i128>
            NonZero<i16>
            NonZero<i32>
            NonZero<i64>
            NonZero<i8>
            NonZero<isize>
            NonZero<u128>
            NonZero<u16>
          and $N others

error[E0277]: type `NoFromScanf` can't be parsed by sscanf because it does not implement `FromScanf`
  --> tests/fail/nightly/missing_trait.rs:10:29
   |
10 |     sscanf::sscanf!("hi", "{NoFromScanf}");
   |                             ^^^^^^^^^^^ can't be parsed by sscanf
   |
   = help: the trait `FromScanf<'_>` is not implemented for `NoFromScanf`
   = note: derive or implement `FromScanf` for `NoFromScanf` to use it with `sscanf!`
   = note: see the `FromScanf` documentation for details: <https://docs.rs/sscanf/latest/sscanf/trait.FromScanf.html>
   = help: the following other types implement trait `FromScanf<'input>`:
             NonZero<i128>
             NonZero<i16>
             NonZero<i32>
             NonZero<i64>
             NonZero<i8>
             NonZero<isize>
             NonZero<u128>
             NonZero<u16>
           and $N others
